<resources>
    <string name="app_name">Smart Value</string>
    <string name="transf_rez_directement_de_l_argent_d_un_r_seau_un_autre">Transfert Mobile money d\'un réseau vers un autre !</string>
    <string name="exit_to_app">Double retour pour sortir</string>
    <string name="zero_frais">Opération facturée aux frais habituels des opérateurs.</string>
    <string name="valider">Partager</string>
    <string name="annuler">Annuler</string>
    <string name="srv_carte_airtel">3232</string>
    <string name="sav_airtel">00242050774444</string>
    <string name="sav_mtn">00242064004646</string>
    <string name="svp_number">Veuillez indiquer un numéro de téléphone</string>
    <string name="renseiger_destinaire">Veuillez renseigner un destinataire</string>
    <string name="identik_destinataire">Vérifiez et renseignez le même destinataire</string>
    <string name="confim_renseiger_destinaire">Veuillez confirmer le numéro du destinataire</string>
    <string name="svp_montant">Veuillez renseigner un montant à envoyer</string>
    <string name="msg_token_fmt">Messaging</string>
    <string name="msg_error">Numéro de téléphone invalide</string>
    <string name="new_version">Nouvelle version disponible</string>
    <string name="new_disponible">Veuillez mettre à jour la nouvelle version pour continuer à utiliser l\'application</string>
    <string name="update">Mettre à jour</string>
    <string name="verify_desti">Echec, verifier le numéro du destinataire</string>
    <string name="verify_mtn">Echec, veuillez renseinger un destinataire MTN</string>
    <string name="verify_airtel">Echec, veuillez renseinger un destinataire</string>
    <string name="verify_montant">Echec, veuillez renseinger un montant superieur ou egal 500 CFA</string>
    <string name="livraison_de_virtuel"><![CDATA[Livraison de Virtuel & espèces]]></string>
    <string name="num_carte">Saisir le numéro de la pièce</string>
    <string name="term">Termes et conditions d\'utilisations</string>
    <string name="term_and_condition">
<b>1. Conditions Générales de Vente</b>
\n
\n<b>1.1</b> Cette application(EasyVoyage) est mise à la disposition de tout acheteur (ci-après dénommé « l\'Acheteur » « client » ou « vous ») sous réserve des présentes Conditions Générales de Vente (ci-après dénommées les « CGV »). Lorsque vous effectuez un achat sur cette application ou utilisez cette application de quelque manière que ce soit, vous acceptez les présentes CGV.
\n
\n<b>1.2</b> Cette application est gérée par NEWSTON, Sociétés de droit Congolais immatriculée au Registre de Commerce et du Crédit Mobilier de Pointe Noire sous le numéro RCCM/1-01-2021-A10-01233 dont le siège social est à Pointe - Noire, rue Tchivili Mont Kamba après le château d’eau (République du Congo), en partenariat avec Maji Technologies.
L\'acheteur déclare, par les présentes, être majeur (18 ans au moins) et disposer de la capacité juridique pour conclure le présent Contrat et utiliser la présente application conformément aux dispositions des présentes CGV qu\'il (elle) comprend parfaitement et accepte. L\'acheteur consent à assumer la pleine responsabilité financière pour toute utilisation de l\’application envers Newston. L\'acheteur déclare, par ailleurs, que toutes les informations communiquées pour avoir accès à l\’application et à effectuer les achats des billets sont vraies, complètes, exactes et il s\'engage à les mettre à jour.
\n
\n<b>1.3</b> Cette application est réservée exclusivement à l\'usage personnel de l\’acheteur. Il est interdit de la modifier, la reproduire, la dupliquer, la copier, la distribuer, la vendre, la revendre ou de l\'exploiter à des fins commerciales ou non commerciales, sous réserve de la possibilité de faire des copies des disponibilités des bus, de votre itinéraire de voyage à des fins personnelles ou d\'envoyer votre itinéraire de voyage à une société de gestion d\'itinéraires agissant de bonne foi ou non.
\n
\n<b>1.4</b> L\’acheteur s\'engage à ne pas utiliser l\’application à des fins illégales ou interdites. L\'acheteur accepte, en particulier, de n\'utiliser l\’application qu\'à des fins personnelles et certifie que les produits ou services achetés sur notre application seront destinés à son usage ou à la consommation de personnes pour le compte desquelles il est légalement autorisé à agir. L\'acheteur ne doit pas revendre à des tiers les produits ou services achetés sur notre application. Newston se réserve le droit, à tout moment et sans préavis, de refuser l\'accès à l\’application et à d\’autres services du service client. Toute communication relative au service client ou à la réservation devra être envoyée par courrier électronique à l\'adresse contact@easyvoyagecongo.com.
\n\n
\n<b>2. Votre contrat</b>
\n
\n<b>2.1</b> Conformément aux exigences de l\’article 1369-8 du code civil, l\’Acheteur accepte l\’usage du support électronique comme mode de conclusion du contrat.
\n
\n<b>2.2</b> À travers l\’application, Newston offre un service d\’achat et de réservation des billets des sociétés de transport routier en ligne. Un achat ou une réservation sur cette application signifie tout type de commande de produits ou de services que vous effectuez avec obligation de paiement et qui a été confirmée par l\’application EasyVoyage. En achetant des produits ou des services de voyages par EasyVoyage, vous établissez un contrat directement avec le/les société(s) de transports voyageurs. Newston n\’assure que la vente des billets. Ainsi pour les services hors ligne, transport Express, location et autres services, vous devez contacter directement la société de transport concerné.
\n
\n<b>2.3</b> Le terme « Fournisseur de Voyages » englobe, entre autres, les sociétés de transports Voyageurs, les fournisseurs de forfaits de voyage et les sociétés de location de voitures
\n
\n<b>2.4</b> Newston effectue la réservation pour votre compte et votre contrat sera soumis aux conditions générales du Fournisseur de Voyages qui peut limiter ou exclure sa responsabilité (souvent en vertu de différentes conventions internationales applicables). Si vous souhaitez prendre connaissance des conditions du Fournisseur de Voyages, vous pourrez consulter les liens disponibles de notre Site. S\'il n\'est pas possible de consulter les conditions du Fournisseur de Voyages via un lien, nous vous communiquerons, sur simple demande, les coordonnées du Fournisseur de Voyages afin que vous puissiez le contacter (Formulaire Conditions du Fournisseur). Assurez-vous de bien lire les conditions spécifiques du Fournisseur de Voyages concernant les frais d\'annulation et autres conditions importantes.
\n
\n<b>2.5</b> En utilisant EasyVoyage pour réserver des produits et/ou des services, vous autorisez Newston, non seulement, à vous représenter pendant le processus de recherche entre les différents Fournisseurs de Voyages et lors de la réservation des produits et/ou services fournis par le Fournisseur de Voyages sélectionné, mais également à procéder au paiement des produits ou services en question en votre nom et pour votre compte.
\n\n
\n<b>3.	Paiement</b>
\n
\n<b>3.1 Modes de paiement</b>
\n
Les paiements des billets s\’effectuent par Airtel money et Mtn mobile money selon votre préférence. La validation des paiements s\’effectuera toujours par une confirmation, grâce à la notification que vous recevrez de la part des sociétés de télécommunications spécialisées dans le transfert de fond électronique (MTN CG et Airtel Cg). En suite vous recevrez une confirmation par sms d’avoir payé à EasyVoyage un montant donné avec Numéro de la transaction, et un numéro de référence. Ensuite vous recevrez un sms de confirmation de votre achat.
\n
\n<b>3.2 Conditions Financières des comptes</b>
\n
Vous devez vous rassurer d’avoir dans votre compte mobile money le montant requis afin que votre transaction puisse se faire sans difficulté. Dans le cas contraire vous serez notifié d\’avoir un solde insuffisant pour effectuer la transaction.
\n
\n<b>3.3 Prix des billets</b>
\n
Les prix des billets varient selon les destinations et sont régis par la société de transporteur du Congo Brazzaville. Newston s’engage à pouvoir mettre à votre disposition les tarifs normaux de chaque destination.
Lors du processus d’achat vous serez ramenée à faire votre choix de destination.
\n
\n<b>3.4. Frais des transactions</b>
\n
Les frais de transaction de chaque billet seront toujours de 3,5% conformément aux taux du Mobile money en République du Congo.
\n\n
\n<b>4. Annulation et report</b>
\n
\n<b>4.1. Annulation</b>\n
L\’acheteur est libre d’annuler son billet sans pour autant avancer des justifications, valable ou non. Cependant toute annulation de billet est soumise à une pénalité de 15% de la valeur du billet à payer. Newston s’engage à rembourser la somme restante dans les 48h.
\n<b>4.2.</b> Nous nous réservons le droit d\'annuler votre réservation si nous avons de bonnes raisons de croire qu\'elle est frauduleuse. Dans ce cas, nous essaierons de prendre contact avec vous en utilisant votre numéro de téléphone communiqué lors de la réservation ou de la personne à contacter en cas d’urgence. Si nous ne sommes pas en mesure de prendre contact avec vous de quelque manière que soit, nous annulerons votre réservation sans engagement de notre responsabilité.

\n\n<b>4.3. Report</b>\n
L\’acheteur est libre de droit de pourvoir reporter son voyage. Toutefois une pénalité de 10% de la valeur du billet lui sera imposée.
\n\n
\n<b>5. Force Majeur</b>\n
Aucune des deux Parties ne sera tenue pour responsable vis-à-vis de l\’autre Partie de la non-exécution ou des retards dans l\’exécution d’une obligation du présent contrat liés à la survenance d’un cas de force majeure tels qu’ils sont habituellement admis par la jurisprudence, et notamment en cas de guerres civiles, insurrections, émeutes, inondations, tremblements de terre et autres catastrophes naturelles. La survenance d’un cas de force majeure suspendra les obligations nées du présent contrat pendant toute la durée de son existence. Toutefois, si le cas de force majeure a une durée d’existence supérieure à trente (30) jours consécutifs, il ouvrira droit à la résiliation de plein droit du présent contrat par l\’une des Parties.
\n\n
\n<b>6.</b> En ce qui concerne les éléments optionnels et les demandes spéciales que vous pouvez adresser dans certains cas aux fournisseurs de voyages, concernant un produit déterminé (par exemple : aliments spéciaux, équipements pour handicapés, sièges pour enfants, etc.), veuillez noter que Newston les transmettra aux fournisseurs de voyages concernés, mais sans pour autant pouvoir garantir leur exécution par lesdits fournisseurs de voyages. Il est de votre responsabilité de confirmer avec votre/vos fournisseur(s) de voyages si ces demandes pourront être satisfaites.
    </string>
    <string name="validation">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="select_birth_date">Date de naissance</string>
    <string name="phone1">Numéro de téléphone Airtel</string>
    <string name="phone2">Numéro de téléphone Mtn</string>
    <string name="address">Adresse de résidence</string>
    <string name="city">Ville de résidence</string>
    <string name="pieceType">Quelle pièce d\'identité avez-vous?</string>
    <string name="cni">CNI</string>
    <string name="passeport">PASSEPORT</string>
    <string name="permis_de_conduire">PERMIS DE CONDUIRE</string>
    <string name="scan">Scannez votre ID</string>
    <string name="submit">Valider</string>
    <string name="user_info">Informations</string>
    <string name="age">Tranche d\'âge</string>
    <string name="age_1">18 à 25 ans</string>
    <string name="age_2">26 à 35 ans</string>
    <string name="age_3">36 à 45 ans</string>
    <string name="age_4">46 ans et +</string>
</resources>