<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="0dp"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:fontFamily="@font/dinpro_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_14ssp"
                android:text="@string/user_info"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/bt_close_start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/grey_20" />
    </LinearLayout>

    <View
        android:background="@color/teal_100"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.core.widget.NestedScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/dinpro_medium"/>
            <RadioGroup
                android:id="@+id/radioGroupPiece"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/age1"
                    android:text="@string/age_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/age2"
                    android:text="@string/age_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/age3"
                    android:text="@string/age_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/age4"
                    android:text="@string/age_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:background="@color/teal_100"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_accept_start"
            android:background="@drawable/bg_btn_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/validation"
            android:textColor="@color/white"
            android:fontFamily="@font/dinpro_medium"
            android:layout_weight="1"
            android:textAllCaps="false"/>
        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="0dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_decline_start"
            android:background="@drawable/bg_btn_green_outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/dinpro_medium"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>