<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="0dp"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:fontFamily="@font/dinpro_medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_14ssp"
                android:text="@string/term"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/bt_close"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/grey_20" />
    </LinearLayout>
    <View
        android:background="@color/teal_100"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <androidx.core.widget.NestedScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dinpro_regular"
                android:textColor="?android:textColorPrimary"
                android:text="@string/term_and_condition"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <View
        android:background="@color/teal_100"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_accept"
            android:background="@drawable/bg_btn_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/validation"
            android:textColor="@color/white"
            android:fontFamily="@font/dinpro_medium"
            android:layout_weight="1"
            android:textAllCaps="false"/>
        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="0dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_decline"
            android:background="@drawable/bg_btn_green_outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/dinpro_medium"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>